src/Compilers/Test/Resources/Core/MetadataTests/Invalid/InvalidGenericType.il
// ilasm InvalidGenericType.il /dll

.assembly extern mscorlib
{
  .publickeytoken = (B7 7A 5C 56 19 34 E0 89 )
  .ver 4:0:0:0
}

.assembly InvalidGenericType
{
}

.class public auto ansi beforefieldinit C`2<T1,T2>
       extends [mscorlib]System.Object
{
  .class auto ansi nested public beforefieldinit D<S1>
         extends [mscorlib]System.Object
  {
    .method public hidebysig specialname rtspecialname 
            instance void  .ctor() cil managed
    {
      IL_0000:  ldarg.0
      IL_0001:  call       instance void [mscorlib]System.Object::.ctor()
      IL_0006:  ret
    } 

  } 

  .method public hidebysig specialname rtspecialname 
          instance void  .ctor() cil managed
  {
    IL_0000:  ldarg.0
    IL_0001:  call       instance void [mscorlib]System.Object::.ctor()
    IL_0006:  ret
  } 

} 
